force-app/main/default/objects/GDCProductivityMeasurement__c/GDCProductivityMeasurement__c.object-meta.xml
<CustomObject>
    <label>GDC Productivity Measurement</label>
    <nameField>
        <displayFormat>TSK-{00000}</displayFormat>
        <label>Task No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GDC Productivity Measurement</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>