force-app/main/default/objects/GDCProductivityMeasurement__c/fields/Designer__c.field-meta.xml
<CustomField>
    <fullName>Designer__c</fullName>
    <label>Designer in charge</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Soomin Lim</fullName>
            </value>
            <value>
                <fullName>Chaeho Yang</fullName>
            </value>
            <value>
                <fullName>Boram Jung</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>