force-app/main/default/objects/GDCProductivityMeasurement__c/fields/DesignPlanEnd__c.field-meta.xml
<CustomField>
    <fullName>DesignPlanEnd__c</fullName>
    <label>Design End(Plan)</label>
    <type>Date</type>
</CustomField>