force-app/main/default/objects/GDCProductivityMeasurement__c/fields/DesignPlanMD__c.field-meta.xml
<CustomField>
    <fullName>DesignPlanMD__c</fullName>
    <label>Design MD(Plan)</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>