force-app/main/default/objects/GDCProductivityMeasurement__c/fields/DesignPlanStart__c.field-meta.xml
<CustomField>
    <fullName>DesignPlanStart__c</fullName>
    <label>Design Start(Plan)</label>
    <type>Date</type>
</CustomField>