force-app/main/default/objects/GDCProductivityMeasurement__c/fields/DesignResultEnd__c.field-meta.xml
<CustomField>
    <fullName>DesignResultEnd__c</fullName>
    <label>Design End(Result)</label>
    <type>Date</type>
</CustomField>