force-app/main/default/objects/GDCProductivityMeasurement__c/fields/DesignResultMD__c.field-meta.xml
<CustomField>
    <fullName>DesignResultMD__c</fullName>
    <label>Design MD(Result)</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>