force-app/main/default/objects/GDCProductivityMeasurement__c/fields/DesignResultStart__c.field-meta.xml
<CustomField>
    <fullName>DesignResultStart__c</fullName>
    <label>Design Start(Result)</label>
    <type>Date</type>
</CustomField>