force-app/main/default/objects/GDCProductivityMeasurement__c/fields/DevelopCompleted__c.field-meta.xml
<CustomField>
    <fullName>DevelopCompleted__c</fullName>
    <formula>if ( DevelopReworkYN__c = true,  DevelopReworkEnd__c ,  DevelopResultEnd__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Develop Completed</label>
    <type>DateTime</type>
</CustomField>