force-app/main/default/objects/GDCProductivityMeasurement__c/fields/Developer__c.field-meta.xml
<CustomField>
    <fullName>Developer__c</fullName>
    <label>Developer in charge</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Akash Gupta</fullName>
            </value>
            <value>
                <fullName>Anish Jain</fullName>
            </value>
            <value>
                <fullName>Ashish Dubey</fullName>
            </value>
            <value>
                <fullName>Divyam Gupta</fullName>
            </value>
            <value>
                <fullName>Gitesh Saini</fullName>
            </value>
            <value>
                <fullName>Kajal Choudhary</fullName>
            </value>
            <value>
                <fullName>Rakshit Segwal</fullName>
            </value>
            <value>
                <fullName>Saurav Sankhyan</fullName>
            </value>
            <value>
                <fullName>Vikrant Kumar Singh</fullName>
            </value>
            <value>
                <fullName>Pearl Lee</fullName>
            </value>
            <value>
                <fullName>Jeff Lee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>