force-app/main/default/objects/GDCProductivityMeasurement__c/fields/DevelopPlanEnd__c.field-meta.xml
<CustomField>
    <fullName>DevelopPlanEnd__c</fullName>
    <label>Develop End(Plan)</label>
    <type>Date</type>
</CustomField>