force-app/main/default/objects/GDCProductivityMeasurement__c/fields/DevelopPlanMD__c.field-meta.xml
<CustomField>
    <fullName>DevelopPlanMD__c</fullName>
    <label>Develop MD(Plan)</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>