force-app/main/default/objects/GDCProductivityMeasurement__c/fields/DevelopPlanMH__c.field-meta.xml
<CustomField>
    <fullName>DevelopPlanMH__c</fullName>
    <formula>DevelopPlanMD__c *8</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Develop MH(Plan)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>