force-app/main/default/objects/GDCProductivityMeasurement__c/fields/DevelopPlanStart__c.field-meta.xml
<CustomField>
    <fullName>DevelopPlanStart__c</fullName>
    <label>Develop Start(Plan)</label>
    <type>Date</type>
</CustomField>