force-app/main/default/objects/GDCProductivityMeasurement__c/fields/DevelopResultEnd__c.field-meta.xml
<CustomField>
    <fullName>DevelopResultEnd__c</fullName>
    <label>Develop End(Result)</label>
    <type>DateTime</type>
</CustomField>