force-app/main/default/objects/GDCProductivityMeasurement__c/fields/DevelopResultMD__c.field-meta.xml
<CustomField>
    <fullName>DevelopResultMD__c</fullName>
    <formula>Round( DevelopResultMH__c / 8, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Develop MD(Result)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>