force-app/main/default/objects/GDCProductivityMeasurement__c/fields/DevelopResultMH__c.field-meta.xml
<CustomField>
    <fullName>DevelopResultMH__c</fullName>
    <label>Develop MH(Result)</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>