force-app/main/default/objects/GDCProductivityMeasurement__c/fields/DevelopResultStart__c.field-meta.xml
<CustomField>
    <fullName>DevelopResultStart__c</fullName>
    <label>Develop Start(Result)</label>
    <type>DateTime</type>
</CustomField>