force-app/main/default/objects/GDCProductivityMeasurement__c/fields/DevelopReworkDesc__c.field-meta.xml
<CustomField>
    <fullName>DevelopReworkDesc__c</fullName>
    <label>Develop Error Description</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>