force-app/main/default/objects/GDCProductivityMeasurement__c/fields/DevelopReworkEnd__c.field-meta.xml
<CustomField>
    <fullName>DevelopReworkEnd__c</fullName>
    <label>Develop Error Handling End(Result)</label>
    <type>DateTime</type>
</CustomField>