force-app/main/default/objects/GDCProductivityMeasurement__c/fields/DevelopReworkMD__c.field-meta.xml
<CustomField>
    <fullName>DevelopReworkMD__c</fullName>
    <formula>ROUND(   DevelopReworkMH__c / 8,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Develop Error Handling M/D(Result)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>