force-app/main/default/objects/GDCProductivityMeasurement__c/fields/DevelopReworkMH__c.field-meta.xml
<CustomField>
    <fullName>DevelopReworkMH__c</fullName>
    <label>Develop Error Handling M/H(Result)</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>