force-app/main/default/objects/GDCProductivityMeasurement__c/fields/DevelopReworkStart__c.field-meta.xml
<CustomField>
    <fullName>DevelopReworkStart__c</fullName>
    <label>Develop Error Handling Start(Result)</label>
    <type>DateTime</type>
</CustomField>