force-app/main/default/objects/GDCProductivityMeasurement__c/fields/DevelopReworkYN__c.field-meta.xml
<CustomField>
    <fullName>DevelopReworkYN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Develop Error YN</label>
    <type>Checkbox</type>
</CustomField>