force-app/main/default/objects/GDCProductivityMeasurement__c/fields/DevelopTotalMD__c.field-meta.xml
<CustomField>
    <fullName>DevelopTotalMD__c</fullName>
    <formula>ROUND (( DevelopResultMH__c + if ( DevelopReworkYN__c == TRUE, DevelopReworkMH__c , 0) ) / 8,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Develop Total MD</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>