force-app/main/default/objects/GDCProductivityMeasurement__c/fields/DevelopTotalMH__c.field-meta.xml
<CustomField>
    <fullName>DevelopTotalMH__c</fullName>
    <formula>DevelopResultMH__c + if (  DevelopReworkYN__c == TRUE,  DevelopReworkMH__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Develop Total MH</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>