force-app/main/default/objects/GDCProductivityMeasurement__c/fields/DevType__c.field-meta.xml
<CustomField>
    <fullName>DevType__c</fullName>
    <label>Development Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>목록</fullName>
            </value>
            <value>
                <fullName>신규</fullName>
            </value>
            <value>
                <fullName>수정</fullName>
            </value>
            <value>
                <fullName>조회</fullName>
            </value>
            <value>
                <fullName>삭제</fullName>
            </value>
            <value>
                <fullName>보고서</fullName>
            </value>
            <value>
                <fullName>대시보드</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>