force-app/main/default/objects/GDCProductivityMeasurement__c/fields/FP_MD__c.field-meta.xml
<CustomField>
    <fullName>FP_MD__c</fullName>
    <label>FP MD</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>