force-app/main/default/objects/GDCProductivityMeasurement__c/fields/JiraDescription__c.field-meta.xml
<CustomField>
    <fullName>JiraDescription__c</fullName>
    <label>Jira Description</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>