force-app/main/default/objects/GDCProductivityMeasurement__c/fields/JiraIssueType__c.field-meta.xml
<CustomField>
    <fullName>JiraIssueType__c</fullName>
    <label>Jira Issue Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Task</fullName>
            </value>
            <value>
                <fullName>Sub-task</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>