force-app/main/default/objects/GDCProductivityMeasurement__c/fields/JiraKey__c.field-meta.xml
<CustomField>
    <fullName>JiraKey__c</fullName>
    <label>Jira Key</label>
    <length>20</length>
    <type>Text</type>
</CustomField>