force-app/main/default/objects/GDCProductivityMeasurement__c/fields/JiraSummary__c.field-meta.xml
<CustomField>
    <fullName>JiraSummary__c</fullName>
    <label>Jira Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>