force-app/main/default/objects/GDCProductivityMeasurement__c/fields/ParentID__c.field-meta.xml
<CustomField>
    <fullName>ParentID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent ID</label>
    <referenceTo>GDCProductivityMeasurement__c</referenceTo>
    <relationshipName>Task_Performance</relationshipName>
    <type>Lookup</type>
</CustomField>