force-app/main/default/objects/GDCProductivityMeasurement__c/fields/ParentTask__c.field-meta.xml
<CustomField>
    <fullName>ParentTask__c</fullName>
    <formula>ParentID__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Task</label>
    <type>Text</type>
</CustomField>