force-app/main/default/objects/GDCProductivityMeasurement__c/fields/ParentTitle__c.field-meta.xml
<CustomField>
    <fullName>ParentTitle__c</fullName>
    <formula>ParentID__r.Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Title</label>
    <type>Text</type>
</CustomField>