force-app/main/default/objects/GDCProductivityMeasurement__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To Do</fullName>
            </value>
            <value>
                <fullName>In-Design</fullName>
            </value>
            <value>
                <fullName>In-Development</fullName>
            </value>
            <value>
                <fullName>In-Testing</fullName>
            </value>
            <value>
                <fullName>HQ Test</fullName>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>