force-app/main/default/objects/GDCProductivityMeasurement__c/fields/UIType__c.field-meta.xml
<CustomField>
    <fullName>UIType__c</fullName>
    <label>UI Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>