force-app/main/default/objects/GDCProductivityMeasurement__c/validationRules/End_Date_is_required_for_Error_Job.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_is_required_for_Error_Job</fullName>
    <active>true</active>
    <errorConditionFormula>DevelopReworkYN__c = true &amp;&amp;  ISNULL(DevelopReworkEnd__c )</errorConditionFormula>
    <errorDisplayField>DevelopReworkEnd__c</errorDisplayField>
    <errorMessage>The Error YN is checked. Please update Error Handling End date.</errorMessage>
</ValidationRule>