force-app/main/default/objects/GDCProductivityMeasurement__c/validationRules/Start_Date_is_required_for_Error_Job.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_is_required_for_Error_Job</fullName>
    <active>true</active>
    <errorConditionFormula>DevelopReworkYN__c = true &amp;&amp;  ISNULL(DevelopReworkStart__c )</errorConditionFormula>
    <errorDisplayField>DevelopReworkStart__c</errorDisplayField>
    <errorMessage>The Error YN is checked. Please update Error Handling Start date.</errorMessage>
</ValidationRule>