force-app/main/default/objects/GDCProductivityMeasurement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>JiraKey__c</columns>
    <columns>Category__c</columns>
    <columns>Title__c</columns>
    <columns>Designer__c</columns>
    <columns>Developer__c</columns>
    <columns>UIType__c</columns>
    <columns>DevType__c</columns>
    <columns>FP_MD__c</columns>
    <columns>DevelopResultMH__c</columns>
    <columns>DevelopResultMD__c</columns>
    <columns>DevelopReworkMH__c</columns>
    <columns>DevelopReworkMD__c</columns>
    <columns>DevelopTotalMH__c</columns>
    <columns>DevelopTotalMD__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>